tg-7286. [BE] Endpoint para obtener info de los turnos